Sun Mar 22 20:39:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb: use Kernel.exit to get rid of using
	  IRB::ExtendCommandBundle#exit.  a patch from Dmitry Vazhov at
	  [ruby-core:22986].

Fri Mar 20 22:55:00 2009  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_convert_type, rb_to_integer)
	  (rb_check_convert_type): Improve error messages.

Fri Mar 20 18:41:53 2009  Akinori MUSHA  <knu@iDaemons.org>

	* array.c (Array#try_convert): New method backported from 1.9.

	* hash.c (Hash#try_convert): New method backported from 1.9.

	* io.c (IO#try_convert): New method backported from 1.9.

	* re.c (Regexp#try_convert): New method backported from 1.9.

	* string.c (String#try_convert): New method backported from 1.9.

Fri Mar 20 18:01:12 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_digest.c (GetDigestPtr): use StringValueCStr
	  instead of STR2CSTR.

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_key_initialize): ditto.
	  (ossl_ec_group_initialize): ditto.

Thu Mar 19 23:18:44 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c: revert incomplete read_nonblock
	  implemenatation.

Wed Mar 18 02:30:41 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (open_server_inaddr_any): fixed multiple network
	  families problem. a patch from Charl Matthee at [ruby-core:21033].

Tue Mar 17 14:56:26 2009  Tanaka Akira  <akr@fsij.org>

	* lib/pathname.rb (Pathname#sub): set $~ in block.binding.
	  [ruby-dev:38173]

Mon Mar 16 16:37:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (eventloop_sleep, lib_eventloop_core),
	  (lib_watchdog_core): tv_usec is not time_t.

Mon Mar 16 15:33:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_arity): fixed rdoc.  [ruby-core:18708]

Sun Mar 15 12:50:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (run_final): frees zombies only.  [ruby-dev:38171]

Sun Mar 15 04:19:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
